style: fixed dropdown being cutoff (this is temporary)
Need to look at this again as there is a shadow artifact from the
loading bar visible without .modal-body { overflow:hidden}

--- a/app/styles/modals.less
+++ b/app/styles/modals.less
@@ -43,23 +43,22 @@
 	}
 
 	.modal-body {
-		overflow: hidden;
 
 		#loading-bar .bar {
 			position: absolute !important;
 			height: .5em;
 		}
-		
+
 		.dl-horizontal {
-			
+
 			dt {
-				width:100px;
+				width: 100px;
 			}
-			
+
 			dd {
 				margin-left: 120px;
 			}
-			
+
 		}
 
 	}
